[package]
name = "rl-camera-path-editor"
version = "2.0.0"
description = "RL Camera Path Editor - by michos"
authors = ["michos"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[package.metadata.tauri]
bundle = false
